Fix(scrollbar): scrollbar issue should be fix

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,6 +1,5 @@
 .projects {
   margin-left: 0;
-  overflow: hidden;
 
   .navigation {
     margin-top: 9.5rem;
